# metal-cpp

./: CMakeLists.txt
Foundation/: NSData.hpp  NSPrivate.hpp
QuartzCore/: CADefines.hpp  CAPrivate.hpp
